--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nuxt-content-starter",
   "private": true,
   "type": "module",
+  "packageManager": "pnpm@9.15.5",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -29,10 +30,9 @@
     "isotope-layout": "^3.0.6",
     "plyr": "^3.7.8",
     "prismjs": "^1.29.0",
-    "sass": "1.72",
     "swiper": "^11.0.5",
     "typewriter-effect": "^2.21.0",
     "video.js": "^8.6.1",
     "vue-tippy": "^6.4.1"
-  }
+  },
 }
